--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "luxon": "^1.26.0",
     "mongoose": "^5.11.18",
     "puppeteer": "^7.1.0"
   }
